# codeArbiter

./: .gitattributes  .gitignore  AGENTS.md  CA-CONFIG-TODO.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODEARBITER_PLAN.md  CODEARBITER_PROGRESS.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  ORCHESTRATOR.md  PRIVACY.md  README.md  SECURITY.md  SPRINT.md  package.json
.agents/: AGENTS-CODEARBITER-ROOT  settings.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codearbiter/: CONTEXT.md  coding-standards.md  farm.md  open-questions.md  open-tasks.md  security-controls.md  sprint-log.md  tech-stack.md
.github/: PULL_REQUEST_TEMPLATE.md  ci-impact-map.json  dependabot.yml  docs-contract.json  pi-promotion-targets.json
agents/: finding-triage.md
commands/: add-dep.md  checkpoint.md  commands.md  statusline.md
core/: activation-contract.json  hosts.json
docs/: architecture.md  codex-parity-testing.md  demo-script.md  hooks.md  parity.md  pi-parity-testing.md
hooks/: init-codearbiter.py  session-start.sh  statusline.py  wire-statusline.py
legacy/: .ansible-lint  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ALLOWED_LICENSES.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  ansible.cfg  docker-compose.yml  package.json  solution.yaml
plugins/ca-sandbox/tools/__fixtures__/rust/: Cargo.toml
plugins/ca-sandbox/tools/__fixtures__/rust/src/: main.rs
revendor/: TASK-02.md
site/: README.md  VOICE.md  (+4 more)
(+1814 files in other folders)
